--- a/dsPIC33CK/dsPIC33CK_PIM.X/mcc-manifest-autosave.yml
+++ b/dsPIC33CK/dsPIC33CK_PIM.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: dsPIC33CK_PIM
-creation_date: 2025-03-27T14:43:20.875-07:00[America/Los_Angeles]
+creation_date: 2025-03-27T14:52:53.236-07:00[America/Los_Angeles]
 operating_system: Linux
 mcc_mode: IDE
 mcc_mode_version: v6.25
@@ -28,6 +28,8 @@ modules:
 - {name: '@mchp-mcc/pic24-dspic33-interrupt', type: MELODY, version: 1.4.0}
 - {name: '@mchp-mcc/pic24-dspic33-pin-manager', type: MELODY, version: 1.3.0}
 - {name: '@mchp-mcc/pic24-dspic33-reset', type: MELODY, version: 1.1.0}
+- {name: '@mchp-mcc/pic24-dspic33-uart-protocol-upb', type: MELODY, version: 1.5.0}
 - {name: '@mchp-mcc/pic24-dspic33-wdt-upb-v1', type: MELODY, version: 1.2.1}
 - {name: '@mchp-mcc/pin-content-processor', type: MELODY, version: 3.9.0}
+- {name: '@mchp-mcc/uart-driver', type: MELODY, version: 1.10.2}
 - {name: '@mchp-mcc/wdt-16bit-driver', type: MELODY, version: 1.0.9}
